Revision history for Perl extension Statistics::R.

0.x
    - Skip tests that hang on Windows (thanks Clifford Sobchuk and Gisbert W.
      Selke, RT #77761)

0.29  2012-11-07
    - Fixed cross-platform filename problem in run_from_file (thanks Clifford
      Sobchuk, RT #77761)

0.28  2012-11-06
    - Fixed packaging issue by repackaging with Module::Install version 1.06
    - Fixed character causing failure of POD test

0.27  2012-03-22
    - Better handling of R line length limits
    - Better quoting of strings passed to R
    - Optimizations
    
0.26  2012-01-28
    - Support more R installation paths in Windows (patch by Adam Kennedy)

0.25  2011-12-21
    - Fixed a bug in the get() method (reported by Manuel A. Alonso Tarajano,
      patched by Brian Cassidy)

0.24  2011-11-09
    - Require Text::Balanced >= 0.97 to prevent bad surprises (reported by Ryan
      Golhar)

0.23  2011-10-28
    - Arrays of number-containing strings are now handled properly (RT bug 
      #71988, patch by dheiman)

0.22  2011-10-09
    - The run() method now accepts an array of strings as input
    - New run_from_file() method to read and execute commands from an R file
    - Better detection of R errors by using the R exception system (issue
      reported by Mike Imelfort)
    - Updated error handling mechanism to detect R syntax errors in addition
      to R runtime errors
    - Tests now work for different locales (issue reported by Knut Behrends)

0.21  2011-09-04
    - Tweaked the regular expressions that parse the R output stream for added
      speed and robustness

0.20  2011-08-31
    - Refactored the entire R communication bridge to avoid writing and reading
      files. All data is now stored in memory and passed by pipes. This fixes
      bug RT #11309, #11918, #66190 and #70314
    - Refactored the communications in shared mode
    - Put platform-specific code and legacy code in separate modules

0.10  2011-08-27  