@@ -3,6 +3,8 @@ Revision history for Perl extension Statistics::R.
 0.x
     - Skip tests that hang on Windows (thanks Clifford Sobchuk and Gisbert W.
       Selke, RT #77761)
+    - Automatically destroy the R bridge when Statistics::R goes out of scope
+      (unless running in shared mode)
 
 0.29  2012-11-07
     - Fixed cross-platform filename problem in run_from_file (thanks Clifford
